# example-rpm-packages

./: .gitignore  README.md  enabled_packages.sh  make_rpms.sh  make_tarballs.sh
sterling/: CMakeLists.txt  README.md  sterling.spec
sterling/po/: CMakeLists.txt  cs.po  de.po  fr.po  it.po  ru.po  sterling.pot
sterling/src/: CMakeLists.txt  config.h.in  main.c
tdcc/: CMakeLists.txt  tdcc.desktop  tdcc.spec
tdcc/tdcc/: CMakeLists.txt  __init__.py  helloworld.py
