PROJECT (sterling)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR})
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

find_package(GLIB2 REQUIRED)
find_package(Gettext)
include_directories(${GLIB2_INCLUDE_DIRS})

SET(LOCALEDIR "${CMAKE_INSTALL_PREFIX}/share/locale")

ADD_SUBDIRECTORY (src)

if(GETTEXT_FOUND)
  ADD_SUBDIRECTORY (po)
endif()
